<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_40">

        <TextView
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Each correct answer gets 1 point."
            android:textColor="@color/purple_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <TextView
                style="@style/question_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many_days_do_we_have_in_a_week" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answerFive"
                    style="@style/answer_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <RadioButton
                    android:id="@+id/answerSeven"
                    style="@style/answer_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <TextView
                style="@style/question_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many_letters_are_there_in_the_english_alphabet" />

            <EditText
                android:id="@+id/alphabetAnswer"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <TextView
                style="@style/question_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many_primary_colors_are_there_select_three" />

            <CheckBox
                android:id="@+id/red"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <CheckBox
                android:id="@+id/yellow"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <CheckBox
                android:id="@+id/green"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <CheckBox
                android:id="@+id/blue"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <TextView
                style="@style/question_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/which_is_the_tallest_animal_on_the_earth" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answerGirraffe"
                    style="@style/answer_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/girraffe" />

                <RadioButton
                    android:id="@+id/answerElephant"
                    style="@style/answer_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elephant" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <TextView
                style="@style/question_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many_planets_are_there_in_our_solar_system" />

            <EditText
                android:id="@+id/answerPlanet"
                style="@style/answer_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="Submit"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>